Bug 55138 - When SYSUSERCONFIG filepath contains "$", first start fails with message: Unhandled exception cannot open directory...
Summary: When SYSUSERCONFIG filepath contains "$", first start fails with message: Unh...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: All All
: medium critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:3.7.0 target:3.6.4
Keywords:
: 56775 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-20 10:40 UTC by Serge
Modified: 2012-11-13 12:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot error message (515.68 KB, image/bmp)
2012-09-20 10:40 UTC, Serge
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Serge 2012-09-20 10:40:08 UTC
Created attachment 67432 [details]
Screenshot error message

Hi,

I installed LibreOffice 3.6.1.2 on a Windows XP SP3 PC. This PC has been cloned in 2 of our classrooms. The roaming profiles of the users have been cleaned. I do a lot of redirections of the roaming profiles to a mounted networkdisk labled H:\

Environment variable
APPDATA=\\ServerName\home$\teachers\INFOTEACHERS\TeacherName\appdata
or
APPDATA=\\ServerName\home$\students\class\StudentName\appdata

Now after the first startup I have the following error message:

Unhandeled exception:
cannot open directory
file://ServerName/home/teachers/INFOTEACHERS/TeacherName/appdata/LibreOffice/3/user/uno_packages/cache/registry/com.sun.star.comp.deployment.bundle.PackageRegistryBackend/registry

Fact is that the home file service is called home$. The $ is missing in the error message saying that home does not exist (this is correct it does not exist as on the server it is called home$). Is there a filtering which removes the $ from a string.

Now i have a solution in changing the bootstrap.ini file (on all PC's)
Old bootstrap.ini
[ErrorReport]
ErrorReportPort=80
ErrorReportServer=report.libreoffice.org
[Bootstrap]
InstallMode=<installmode>
ProductKey=LibreOffice 3.6
UserInstallation=$SYSUSERCONFIG/LibreOffice/3

My new bootstrap.ini
[ErrorReport]
ErrorReportPort=80
ErrorReportServer=report.libreoffice.org
[Bootstrap]
InstallMode=<installmode>
ProductKey=LibreOffice 3.6
;UserInstallation=$SYSUSERCONFIG/LibreOffice/3
UserInstallation=file:///H:/AppData/LibreOffice/3
Comment 1 Stephan Bergmann 2012-11-05 16:10:59 UTC
*** Bug 56775 has been marked as a duplicate of this bug. ***
Comment 2 Stephan Bergmann 2012-11-06 14:25:04 UTC
bug 53288 might be the same problem
Comment 3 Stephan Bergmann 2012-11-06 15:09:39 UTC
Also reproducible on current Linux master when HOME pathname contains "$":

> mkdir ~/strange\$
> touch ~/strange  # to prevent LO from erroneously creating a dir there
> HOME=~/strange\$ .../soffice
terminate called after throwing an instance of 'com::sun::star::uno::RuntimeException'
Comment 4 Not Assigned 2012-11-06 15:23:15 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8246bdb500a6d83ea9b61f58fb74e051432e32d7

fdo#55138: Do not double-expand bootstrap variables



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Stephan Bergmann 2012-11-06 16:20:59 UTC
(In reply to comment #4)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=8246bdb500a6d83ea9b61f58fb74e051432e32d7
> 
> fdo#55138: Do not double-expand bootstrap variables

requested backport to libreoffice-3-6 towards LO 3.6.4, <https://gerrit.libreoffice.org/#/c/994/>
Comment 6 Not Assigned 2012-11-07 10:13:47 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd5b4dcf8ccf0c3a3fac286f0e42d73ef8dbe6a5&g=libreoffice-3-6

fdo#55138: Do not double-expand bootstrap variables


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Serge 2012-11-13 12:03:01 UTC
Tested on one PC and OK for me.
Is now also faster as it only creates 72 files and 63 folders as the other version created about 4210 files and 1450 folders.