fdo#55138: Do not double-expand bootstrap variables

For some reason that escapes me now, the old code double-expanded URLs in
CONFIGURATION_LAYERS and in extension layer's configmgr.ini SCHEMA/DATA.  That
produced wrong results when the pathnames represented by those URLs contain
any "$" characters, as apparently routinely happens on Windows with roaming
profiles.

Change-Id: Iff149e7d8736cbcda579376cdc89e24cf99ccc97
(cherry picked from commit 8246bdb500a6d83ea9b61f58fb74e051432e32d7)